[package]
name = "aoc-rust"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
md5 = "0.7.0"
num-complex = "0.3.1"
regex = "1.4.2"
scan_fmt = "0.2.5"
serde_json = "1.0.60"
