[package]
name = "aoc-rust"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
year2015 = { path = "../year2015" }
year2016 = { path = "../year2016" }
year2017 = { path = "../year2017" }
year2018 = { path = "../year2018" }
year2020 = { path = "../year2020" }
