[package]
name = "aoc-rust"
version = "0.1.0"
authors = ["Peter Helbing <github@ph157.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
year2015 = { path = "../year2015" }
year2016 = { path = "../year2016" }
year2017 = { path = "../year2017" }
year2018 = { path = "../year2018" }
year2019 = { path = "../year2019" }
year2020 = { path = "../year2020" }
year2021 = { path = "../year2021" }
year2022 = { path = "../year2022" }
year2023 = { path = "../year2023" }
year2024 = { path = "../year2024" }
year2025 = { path = "../year2025" }
cookie = "0.18.1"
cookie_store = "0.21.1"
dotenv = "0.15.0"
ureq = { version = "2.12.1", features = ["tls", "cookies"] }
url = "2.5.4"
