[package]
name = "year2015"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
itertools = "0.12.0"
md-5 = "0.10.6"
regex = "1.10.2"
serde_json = "1.0.108"
