[package]
name = "year2016"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
itertools = "0.9.0"
md-5 = "0.9.1"
num-complex = "0.3.1"
regex = "1.4.2"