[package]
name = "year2016"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
itertools = "0.10.3"
md-5 = "0.10.0"
num-complex = "0.4.0"
regex = "1.5.4"