[package]
name = "year2016"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
itertools = "0.13.0"
md-5 = "0.10.6"
num-complex = "0.4.4"
regex = "1.11.1"
