[package]
name = "year2017"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
itertools = "0.13.0"
regex = "1.11.1"
