[package]
name = "year2018"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
regex = "1.4.2"