[package]
name = "year2019"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
itertools = "0.10.3"
regex = "1.5.4"
scan_fmt = "0.2.6"
