[package]
name = "year2021"
version = "0.1.0"
authors = ["Peter Helbing <peter@abulafia.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
util = { path = "../util" }
bitvec = "0.20.4"
itertools = "0.13.0"
scan_fmt = "0.2.6"
